# pastetry

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/clip-ui/: app_controller.cpp  app_controller.h  clipboard_inspector_dialog.cpp  clipboard_inspector_dialog.h  entry_inspector_dialog.cpp  entry_inspector_dialog.h  global_shortcut_service.cpp  global_shortcut_service.h  history_model.cpp  history_model.h  ipc_async_runner.cpp  ipc_async_runner.h  main.cpp  main_window.cpp  main_window.h  preview_text_delegate.cpp  preview_text_delegate.h  quick_paste_dialog.cpp  quick_paste_dialog.h  settings_dialog.cpp  settings_dialog.h  shortcut_config.cpp  shortcut_config.h
src/clipd/: clipboard_daemon.cpp  clipboard_daemon.h  main.cpp  wayland_capability_probe.cpp  wayland_capability_probe.h  wayland_clipboard_runtime.cpp  wayland_clipboard_runtime.h
src/common/: app_paths.cpp  app_paths.h  blob_store.cpp  blob_store.h  clipboard_repository.cpp  clipboard_repository.h  ipc_client.cpp  ipc_client.h  ipc_protocol.cpp  ipc_protocol.h  logging.cpp  logging.h  models.h
tests/: app_controller_integration_tests.cpp  quick_paste_dialog_tests.cpp  repository_tests.cpp  wayland_clipboard_runtime_tests.cpp
